#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT(prajna, 0.01, fireaxe.hq@outlook.com)
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(foreign)

# Checks for programs.
AC_PROG_CC
AC_CONFIG_SUBDIRS([include paramita skandhas])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Makefile paramita/Makefile skandhas/Makefile]) 
