AUTOMAKE_OPTIONS = foreign subdir-objects
bin_PROGRAMS = skandhas
skandhas_SOURCES = skandhas.cpp common.cpp exc/exc_info.cpp exc/exc_trigger.cpp
skandhas_CFLAGS = -I../include -Iinclude
skandhas_CXXFLAGS = -I../include -Iinclude
skandhas_LDFLAGS = -L/opt/mytoolchain/arm-qhao-linux-gnueabi/lib -lpthread

